--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,13 @@
 
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
         android:id="@+id/imageView"
-        android:src="@drawable/tausi"
-        android:scaleType="centerCrop" />
+        android:layout_width="match_parent"
+        android:layout_height="556dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/mainpg1" />
 
     <Button
         android:id="@+id/findRestaurantsButton"
@@ -18,9 +20,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimaryText"
+        android:background="@color/colorAccent"
         android:text="Find Restaurants"
         android:textColor="@color/colorPrimaryLight" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/appNameTextView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_marginTop="35dp"-->
+<!--        android:fontFamily="monospace"-->
+<!--        android:text="MyRestaurants"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/colorPrimaryLight"-->
+<!--        android:textSize="40sp"-->
+<!--        android:typeface="monospace" />-->
+
 
     <TextView
         android:id="@+id/appNameTextView"
@@ -29,9 +46,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
+        android:fontFamily="@font/roboto_mono_thin"
         android:text="MyRestaurants"
-        android:textColor="@color/colorPrimaryLight"
-        android:textSize="40sp" />
+        android:textColor="@color/colorTextIcons"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/locationEditText"
@@ -45,7 +64,7 @@
         android:hint="Enter zip code"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="Zip code" />
 
 
 </RelativeLayout>
