--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="556dp"
+        android:layout_height="554dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="0dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/mainpg1" />
+        android:src="@drawable/main" />
 
     <Button
         android:id="@+id/findRestaurantsButton"
@@ -41,15 +42,16 @@
 
     <TextView
         android:id="@+id/appNameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="35dp"
         android:fontFamily="@font/roboto_mono_thin"
         android:text="MyRestaurants"
+        android:textAlignment="center"
         android:textColor="@color/colorTextIcons"
-        android:textSize="50sp"
+        android:textSize="36sp"
         android:textStyle="bold" />
 
     <EditText
